--- a/src/index.pug
+++ b/src/index.pug
@@ -1,3 +1,40 @@
-html
+doctype html
+html(lang="en")
+    head
+        //- Metas
+        //- ===========================================
+        meta(name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0")
+        meta(charset="utf-8")
+
+        - var title = "Projeto Front-End Title"
+        - var description = "Projeto Front-End Description"
+        
+        //- SEO
+        meta(name="description" content=description)
+        meta(name="robots" content="index,follow")
+        title=title
+
+        //- Open Graph
+        meta(property="og:type" content="website")
+        meta(property="og:title" content=title)
+        meta(property="og:description" content=description)
+        meta(property="og:url" content="https://csshortcut.github.io/csshortcut-app")
+        meta(property="og:image" content="https://csshortcut.github.io/csshortcut-app/assets/img/share.png")
+
+        //- Twitter Cards
+        meta(name="twitter:card" content="summary_large_image")
+        meta(name="twitter:title" content=title)
+        meta(name="twitter:description" content=description)
+        meta(name="twitter:url" content="https://csshortcut.github.io/csshortcut-app")
+        meta(name="twitter:image" content="https://csshortcut.github.io/csshortcut-app/assets/img/share.png")
+
+        //-  Styles
+        //- ===========================================
+        link(rel="stylesheet" href="assets/styles/style.css")
+
     body
-        div Ola
+        header heade
+        main main
+        footer footer
+
+        script(type="text/javascript" src="assets/scripts/script.js" async)
