CSS Reset e Fonts adicionadas

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
 
         - var title = "Projeto Front-End Title"
         - var description = "Projeto Front-End Description"
-        
+
         //- SEO
         meta(name="description" content=description)
         meta(name="robots" content="index,follow")
@@ -31,6 +31,11 @@ html(lang="en")
         //-  Styles
         //- ===========================================
         link(rel="stylesheet" href="assets/styles/style.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css")
+
+        //-  Fonts
+        //- ===========================================
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Roboto")
 
     body
         header heade
