--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -1,1 +1,11 @@
-header header :)
+header.header
+    div.container
+        nav.menu
+            ul.menu-itens
+                li.menu-item 
+                    a.menu-link(href="#") Home
+                li.menu-item 
+                    a.menu-link(href="#") Perfil
+        div.profile
+            img.profile-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
+            span.profile-text Afonso Pacifer
