Stick footer adicionado

--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -8,6 +8,19 @@ bg-color = #333
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1;
+}
+
 /* Dev mode */
 border()
     border: 1px dashed #000;
