--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -40,7 +40,7 @@ html(lang="en")
     body
         include ./../partials/header.pug
 
-        main
+        main.main
             block content
 
         include ./../partials/footer.pug
