Imagem de perfil adicionada (retina ready)

--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -21,6 +21,12 @@ body {
     flex: 1;
 }
 
+.container-centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Dev mode */
 border()
     border: 1px dashed #000;
