--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,5 @@
 extends ./layouts/default.pug
 
 block content
-    div Ola mundo
+    main.main.container-centered
+        img(srcset="assets/img/afonso-perfil-1x.jpg 1x, assets/img/afonso-perfil-2x.jpg 2x, " src="assets/img/afonso-perfil-1x.jpg")
