Profile page criado com BEM

--- a/src/layouts/default.pug
+++ b/src/layouts/default.pug
@@ -35,7 +35,7 @@ html(lang="en")
 
         //-  Fonts
         //- ===========================================
-        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Roboto")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|RobotoRoboto:300,400")
 
     body
         include ./../partials/header.pug
