--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -3,9 +3,9 @@ header.header
         nav.menu
             ul.menu-itens
                 li.menu-item 
-                    a.menu-link(href="#") Home
-                li.menu-item 
                     a.menu-link(href="#") Perfil
-        div.profile
-            img.profile-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
+                li.menu-item 
+                    a.menu-link(href="#") Projects
+        div.profile-header
+            img.profile-header__profile-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
             span.profile-text Afonso Pacifer
