--- a/src/assets/styles/partials/header.styl
+++ b/src/assets/styles/partials/header.styl
@@ -1,11 +1,14 @@
+// Header container
 .header {
     width: 100%;
     background-color: highlight-color;
 }
 
+// Menu
 .menu {
     display: flex;
     align-items: center;
+    border()
 }
 
 @media screen and (max-width: 400px) {
@@ -36,7 +39,8 @@
     padding: 10px;
 }
 
-.profile {
+// profile
+.profile-header {
    border()
    margin-left: auto;
 }
@@ -50,7 +54,7 @@
     }
 }
 
-.profile-img {
+.profile-header__profile-img {
     vertical-align: middle;
     border-radius: 50%;
     margin: 5px;
