--- a/src/assets/styles/style.styl
+++ b/src/assets/styles/style.styl
@@ -3,6 +3,10 @@ highlight-color = #ff0066
 secondary-color = #212121
 bg-color = #333
 
+/* Dev mode */
+border()
+    border: 1px dashed #000;
+
 /* Box model */
 * {
     box-sizing: border-box;
@@ -15,10 +19,37 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
+    background-color: bg-color;
+    font-weight: 300;
 }
 
 .main {
     flex: 1;
+}
+
+// profile
+.profile {
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    border()
+}
+
+.profile__profile-img {
+    border-radius: 50%;
+    width: 100%;
+    max-width: 200px;
+}
+
+.heading-lv1 {
+    color: #fff;
+    font-family: 'Lobster', cursive;
+    font-size: 42px;
+    margin: 5px;
+}
+
+.paragraph {
+    color: #fff;
 }
 
 .container-centered {
@@ -26,10 +57,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
-/* Dev mode */
-border()
-    border: 1px dashed #000;
 
 .container {
     border()
