--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -7,5 +7,5 @@ header.header
                 li.menu-item 
                     a.menu-link(href="#") Projects
         div.profile-header
-            img.profile-header__profile-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
+            img.profile-header-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
             span.profile-text Afonso Pacifer
