Criando pagina projects

--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -3,9 +3,9 @@ header.header
         nav.menu
             ul.menu-itens
                 li.menu-item 
-                    a.menu-link(href="#") Perfil
+                    a.menu-link(href="index.html") Perfil
                 li.menu-item 
-                    a.menu-link(href="#") Projects
+                    a.menu-link(href="projects.html") Projects
         div.profile-header
             img.profile-header-img(src="assets/img/afonso-perfil-mini.jpg" alt="Afonso Pacifer Perfil")
             span.profile-text Afonso Pacifer
