Organizando layout da pagina de projects

--- a/src/assets/styles/modules/projects.styl
+++ b/src/assets/styles/modules/projects.styl
@@ -1,1 +1,32 @@
 // projects
+
+.projects {
+    width: 100%;
+}
+
+.projects-list {
+    border()
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.project {
+    border()
+}
+
+.project-name {
+  
+}
+
+.star-icon {
+    fill: highlight-color;
+}
+
+.project-star-count {
+
+}
+
+.project-description {
+
+}
