--- a/src/projects.pug
+++ b/src/projects.pug
@@ -2,4 +2,13 @@ extends ./layouts/default.pug
 
 block content
     main.main.container
-        h1.heading-lv1 Projects
+        div.projects
+            section.projects-list
+                h1.heading-lv1 Projects
+
+                article.project
+                    h2.project-name Project name
+                    include icons/star-icon.html
+                    span.project-star-count 000
+                    p.project-description Descricao do projeto
+
