--- a/src/projects.pug
+++ b/src/projects.pug
@@ -8,7 +8,29 @@ block content
 
                 article.project
                     h2.project-name Project name
-                    include icons/star-icon.html
-                    span.project-star-count 000
+                    div.project-star
+                        include icons/star-icon.html
+                        span.project-star-count 000
+                    p.project-description Descricao do projeto
+
+                article.project
+                    h2.project-name Project name
+                    div.project-star
+                        include icons/star-icon.html
+                        span.project-star-count 000
+                    p.project-description Descricao do projeto
+
+                article.project
+                    h2.project-name Project name
+                    div.project-star
+                        include icons/star-icon.html
+                        span.project-star-count 000
+                    p.project-description Descricao do projeto
+
+                article.project
+                    h2.project-name Project name
+                    div.project-star
+                        include icons/star-icon.html
+                        span.project-star-count 000
                     p.project-description Descricao do projeto
 
