--- a/src/assets/styles/modules/container.styl
+++ b/src/assets/styles/modules/container.styl
@@ -6,6 +6,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+}
+
+.flipped {
+    height: 100%;
 }
 
 .container {
