--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends ./layouts/default.pug
 
 block content
-    main.main.container-centered
+    div.container-centered
         div.profile
             img(srcset="assets/img/afonso-perfil-1x.jpg 1x, assets/img/afonso-perfil-2x.jpg 2x, " src="assets/img/afonso-perfil-1x.jpg" class="profile-img" alt="Afonso Perfil")
             h1.heading-lv1 Afonso Pacifer
