allow SSG using github api

--- a/src/projects.pug
+++ b/src/projects.pug
@@ -11,5 +11,5 @@ block content
                         h2.project-name=project.name
                         div.project-star
                             include icons/star-icon.html
-                            span.project-star-count=project.stars
+                            span.project-star-count=project.stargazers_count
                         p.project-description=project.description
